# Messenger

./: README.md
Client/: CMakeLists.txt  Client.hpp  main.cpp
Client/port/: Makefile  main  main.cpp  port.hpp  thread_safe_queue.hpp
Client/transport_layer/: CMakeLists.txt  main.cpp
Client/transport_layer/header/: client.hpp
Client/transport_layer/source/: client  client.cpp  core  main.cpp
Client/user_interface/: CMakeLists.txt
Client/user_interface/header/: Authorization.h  ChatterBox.h  PortController.h
Client/user_interface/source/: Authorization.cpp  ChatterBox.cpp  main.cpp
DataClasses/: CMakeLists.txt  Database.cpp  Database.hpp  JID.hpp  Makefile  Stanza.cpp  Stanza.hpp  error_codes.cpp  error_codes.hpp  example  example.cpp
Docs/: UML_diagram.vpp
Server/: Connection.cpp  Server.cpp  Server.hpp  server_main.cpp  toDo.txt
Server/build_server/: makefile
client_server/source/: Makefile  client.cpp  client.hpp  main.cpp  thread_safe_queue.hpp
